--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
   font-family: 'Playfair Display', serif;
 }
 
+html, body {
+  scroll-behavior: smooth;
+}
+
 .light {
   color: #fff;
 }
@@ -22,7 +26,6 @@
 .site-wrapper .container {
   width: 100%;
   height: 100vh;
-  padding: 50px 0px 50px 0px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -33,6 +36,24 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media (max-width: 1440px) {
+  .site-wrapper .container {
+    padding: 30px 0px 30px 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  .site-wrapper .container {
+    padding: 20px 0px 20px 0px;
+  }
+}
+
+@media (max-width: 600px) {
+  .site-wrapper .container {
+    padding: 40px 0px 40px 0px;
+  }
 }
 
 .site-wrapper .container .container-text {
@@ -54,40 +75,28 @@
   text-align: justify;
 }
 
-@media (max-width: 900px) {
-  .site-wrapper .container .container-text .short-description {
-    font-size: 1.75em;
-  }
-}
-
-@media (max-width: 768px) {
-  .site-wrapper .container .container-text .short-description {
-    font-size: 1.65em;
-    text-align: left;
-  }
-}
-
 @media (max-width: 600px) {
   .site-wrapper .container .container-text .short-description {
-    font-size: 1.55em;
+    font-size: 1.45em;
+    text-align: left;
   }
 }
 
 @media (max-width: 480px) {
   .site-wrapper .container .container-text .short-description {
-    font-size: 1.45em;
+    font-size: 1.20em;
   }
 }
 
 @media (max-width: 360px) {
   .site-wrapper .container .container-text .short-description {
-    font-size: 1.35em;
+    font-size: 1.15em;
   }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 330px) {
   .site-wrapper .container .container-text .short-description {
-    font-size: 1.25em;
+    font-size: 1.10em;
   }
 }
 
@@ -276,10 +285,59 @@
   overflow: hidden;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1200px) {
   .site-wrapper .container-1, .site-wrapper .container-2, .site-wrapper .container-3, .site-wrapper .container-4, .site-wrapper .container-5, .site-wrapper .container-6, .site-wrapper .container-7, .site-wrapper .container-8, .site-wrapper .container-9, .site-wrapper .container-10, .site-wrapper .container-11, .site-wrapper .container-12, .site-wrapper .container-13, .site-wrapper .container-14, .site-wrapper .container-15, .site-wrapper .container-16, .site-wrapper .container-17, .site-wrapper .container-18, .site-wrapper .container-19, .site-wrapper .container-20, .site-wrapper .container-21, .site-wrapper .container-22, .site-wrapper .container-23, .site-wrapper .container-24, .site-wrapper .container-25 {
     height: auto;
-    padding: 100px 0px 100px 0px;
+    padding: 80px 0px 80px 0px;
+  }
+}
+
+.site-wrapper .bg {
+  padding: 0px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+@supports (-webkit-touch-callout: none) {
+  .site-wrapper {
+    /* CSS specific to iOS devices */
+  }
+  .site-wrapper .bg {
+    background-attachment: none;
+  }
+}
+
+@supports not (-webkit-touch-callout: none) {
+  .site-wrapper {
+    /* CSS for other than iOS devices */
+  }
+  .site-wrapper .bg {
+    background-attachment: fixed;
+  }
+}
+
+@media (max-width: 700px) {
+  .site-wrapper .picture-1 {
+    background-position: 85% center;
+  }
+  .site-wrapper .picture-4 {
+    background-position: 37% center;
+  }
+  .site-wrapper .picture-5 {
+    background-position: 40% center;
+  }
+  .site-wrapper .picture-6 {
+    background-position: 45% center;
+  }
+  .site-wrapper .picture-9 {
+    background-position: 31% center;
+  }
+  .site-wrapper .picture-10 {
+    background-position: 38% center;
+  }
+  .site-wrapper .picture-20 {
+    background-position: 20% center;
   }
 }
 
@@ -404,49 +462,6 @@
   }
   100% {
     background-position: top right;
-  }
-}
-
-.bg {
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-}
-
-@supports (-webkit-touch-callout: none) {
-  .bg {
-    background-attachment: none;
-  }
-}
-
-@supports not (-webkit-touch-callout: none) {
-  /* CSS for other than iOS devices */
-  .bg {
-    background-attachment: fixed;
-  }
-}
-
-@media (max-width: 700px) {
-  .picture-1 {
-    background-position: 85% center;
-  }
-  .picture-4 {
-    background-position: 37% center;
-  }
-  .picture-5 {
-    background-position: 40% center;
-  }
-  .picture-6 {
-    background-position: 45% center;
-  }
-  .picture-9 {
-    background-position: 31% center;
-  }
-  .picture-10 {
-    background-position: 38% center;
-  }
-  .picture-10 {
-    background-position: 33% 30%;
   }
 }
 /*# sourceMappingURL=style.css.map */
