--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,9 @@
 html,body {
     scroll-behavior: smooth;
 }
+.blur {
+    filter: blur(4px) brightness(0.8);
+}
 $smallerPhone: 330px;
 $smallPhone: 360px;
 $mobile: 480px;
@@ -455,4 +458,120 @@ $minbiggerDesktop: 1441px;
     background-position: top right;
   }
 }
+///navigation
+.container {
+    height: 100vh;
+    width: 100%;
+}
+$bar-width: 40px;
+$bar-height: 8px;
+$bar-spacing: 9px;
+.menu-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  cursor: pointer;
+  width: 0%;
+  height: 100%;
+  background: #0b090a; 
+  transition: all 300ms;
+  z-index: 1;
+}
+.menu-wrapper.bg {
+    width: 30%;
+    @include big1200 {
+        width: 45%;
+    }
+    @include tablet {
+        width: 55%;
+    }
+    @include mid600 {
+        width: 75%;
+    }
+    @include mobile {
+        width: 100%;
+    }
+}
+.menu-item {
+    padding: 70px 30px 50px 30px;
+    text-align: center;
+    background: #0b090a; 
+    height: 100%;
+    overflow-y: auto;
 
+    &-link {
+        font-size: 25px;
+        display: block;
+        margin: 40px 10px;
+        text-decoration: none;
+        color: rgba(255, 255, 255, 0.1);
+            text-align: center;
+            background: linear-gradient(
+                to right,
+                #ed8080 0%,
+                #2a77d6 16%,
+                #5eb524 32%,
+                #eacd25 48%,
+                #ed8080 64%,
+                #2a77d6 80%,
+                #5eb524 100%
+            );
+            background-size: 300% 300%;
+            background-repeat: no-repeat;
+            background-position: top left;
+            background-color: #222;
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            background-clip: text;
+            animation: shimmer infinite 3s linear;
+            position: relative;
+    }
+}
+.hamburger-menu,
+.hamburger-menu:after,
+.hamburger-menu:before {
+  width: $bar-width;
+	height: $bar-height;
+    border-radius: 2px;
+    opacity: 0.8;
+}
+.hamburger-menu {
+	position: absolute;
+    right:0;
+    margin: 30px 30px;
+	transform: translateY($bar-spacing);
+	background: rgba(255, 255, 255, 0.8);
+	transition: all 0ms 300ms;
+  
+  &.animate {
+    background: rgba(255, 255, 255, 0); 
+  }
+}
+.hamburger-menu:before {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: $bar-spacing;
+	background: rgba(255, 255, 255, 1);
+	transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+.hamburger-menu:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: $bar-spacing;
+	background: rgba(255, 255, 255, 1);
+	transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+.hamburger-menu.animate:after {
+	top: 0;
+	transform: rotate(45deg);
+	transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+}
+.hamburger-menu.animate:before {
+	bottom: 0;
+	transform: rotate(-45deg);
+	transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+}
