--- a/css/style.css
+++ b/css/style.css
@@ -561,21 +561,38 @@ html, body {
 .hamburger-menu,
 .hamburger-menu:after,
 .hamburger-menu:before {
-  width: 40px;
-  height: 8px;
+  width: 36px;
+  height: 4px;
   border-radius: 2px;
   opacity: 0.8;
+}
+
+@media (max-width: 768px) {
+  .hamburger-menu,
+  .hamburger-menu:after,
+  .hamburger-menu:before {
+    width: 20px;
+    height: 3px;
+  }
 }
 
 .hamburger-menu {
   position: absolute;
   right: 0;
-  margin: 30px 30px;
-  -webkit-transform: translateY(9px);
-          transform: translateY(9px);
+  margin: 30px 30px 20px 20px;
+  -webkit-transform: translateY(6px);
+          transform: translateY(6px);
   background: rgba(255, 255, 255, 0.8);
   -webkit-transition: all 0ms 300ms;
   transition: all 0ms 300ms;
+}
+
+@media (max-width: 768px) {
+  .hamburger-menu {
+    margin: 20px 16px;
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+  }
 }
 
 .hamburger-menu.animate {
@@ -586,7 +603,7 @@ html, body {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 9px;
+  bottom: 6px;
   background: white;
   -webkit-transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
   transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -594,16 +611,28 @@ html, body {
   transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
+@media (max-width: 768px) {
+  .hamburger-menu:before {
+    bottom: 5px;
+  }
+}
+
 .hamburger-menu:after {
   content: "";
   position: absolute;
   left: 0;
-  top: 9px;
+  top: 6px;
   background: white;
   -webkit-transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
   transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
   transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
   transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+@media (max-width: 768px) {
+  .hamburger-menu:after {
+    top: 5px;
+  }
 }
 
 .hamburger-menu.animate:after {
