--- a/css/style.css
+++ b/css/style.css
@@ -295,8 +295,13 @@ html, body {
   overflow: hidden;
 }
 
+.site-wrapper .container-27 {
+  background: #495057;
+  overflow: hidden;
+}
+
 @media (max-width: 1200px) {
-  .site-wrapper .container-1, .site-wrapper .container-2, .site-wrapper .container-3, .site-wrapper .container-4, .site-wrapper .container-5, .site-wrapper .container-6, .site-wrapper .container-7, .site-wrapper .container-8, .site-wrapper .container-9, .site-wrapper .container-10, .site-wrapper .container-11, .site-wrapper .container-12, .site-wrapper .container-13, .site-wrapper .container-14, .site-wrapper .container-15, .site-wrapper .container-16, .site-wrapper .container-17, .site-wrapper .container-18, .site-wrapper .container-19, .site-wrapper .container-20, .site-wrapper .container-21, .site-wrapper .container-22, .site-wrapper .container-23, .site-wrapper .container-24, .site-wrapper .container-25, .site-wrapper .container-26 {
+  .site-wrapper .container-1, .site-wrapper .container-2, .site-wrapper .container-3, .site-wrapper .container-4, .site-wrapper .container-5, .site-wrapper .container-6, .site-wrapper .container-7, .site-wrapper .container-8, .site-wrapper .container-9, .site-wrapper .container-10, .site-wrapper .container-11, .site-wrapper .container-12, .site-wrapper .container-13, .site-wrapper .container-14, .site-wrapper .container-15, .site-wrapper .container-16, .site-wrapper .container-17, .site-wrapper .container-18, .site-wrapper .container-19, .site-wrapper .container-20, .site-wrapper .container-21, .site-wrapper .container-22, .site-wrapper .container-23, .site-wrapper .container-24, .site-wrapper .container-25, .site-wrapper .container-26, .site-wrapper .container-27 {
     height: auto;
     padding: 80px 0px 80px 0px;
   }
@@ -563,7 +568,7 @@ html, body {
   position: relative;
 }
 
-.menu-item-link:nth-child(24) {
+.menu-item-link:nth-child(26) {
   margin-bottom: 100px;
 }
 
